@@ -9,6 +9,9 @@
     The legacy dynamic array class, existing for compatibility only and @e NOT
     to be used in the new code.
 
+    @note Please see @ref overview_container for more information about legacy
+    container classes in wxWidgets.
+
     This section describes the so called @e "dynamic arrays". This is a C
     array-like type safe data structure i.e. the member access time is constant
     (and not linear according to the number of container elements as for linked
