@@ -6,13 +6,14 @@
 /////////////////////////////////////////////////////////////////////////////
 
 /**
-    @class wxHashSet
+    wxHashSet is a legacy hash set container similar to std::unordered_set.
 
-    This is a simple, type-safe, and reasonably efficient hash set class,
-    whose interface is a subset of the interface of STL containers.
+    @note As all the other legacy @ref overview_container "container classes",
+    this class shouldn't be used in the new code.
 
-    The interface is similar to std::tr1::hash_set or std::set classes but
-    notice that, unlike std::set, the contents of a hash set is not sorted.
+    Please see https://en.cppreference.com/w/cpp/container/unordered_set for
+    the full description of this class API: in the default build, this class is
+    a thin wrapper inheriting from the standard class.
 
     Example:
     @code
