@@ -87,6 +87,11 @@ Changes in behaviour which may result in build errors
 
 - Building with wxUSE_UNICODE=0 is not supported any longer.
 
+- wxUSE_STD_CONTAINERS is now set to 1 by default, see "Container Classes"
+  overview in the manual for the description of the changes this may require in
+  the existing code. Alternatively, explicitly set wxUSE_STD_CONTAINERS=0 when
+  compiling the library to preserve full compatibility with the old versions.
+
 - wxMotif and wxGTK1 ports have been removed, please use wxWidgets 3.2 if you
   still need them.
 
